--- a/src/Orchard.Web/Modules/Orchard.ContentPicker/Views/Fields/ContentPicker.cshtml
+++ b/src/Orchard.Web/Modules/Orchard.ContentPicker/Views/Fields/ContentPicker.cshtml
@@ -8,7 +8,7 @@
 }
 <p class="content-picker-field content-picker-field-@name.HtmlClassify()">
     <span class="name">@name:</span>
-    @if(contentItems.Any()) {
+    @if(contentItems!=null && contentItems.Any()) {
         foreach(var contentItem in contentItems) {
             <span class="value">@Html.ItemDisplayLink(contentItem)</span>
             if(contentItem != contentItems.Last()) {
